# sussy_pdf

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  LICENSE  README.md  ROADMAP.md  Roadmap.md  SECURITY.md  TROUBLESHOOTING.md  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_project_tracking.yml
.github/workflows/: ci.yml  quality.yml  tests.yml
dashboard/: api_server.py  app.js  index.html  style.css
demo/: build_logs.txt  error_handling.txt  installation.txt  ps_output.txt  structure.txt  test_results.txt
docker/: Dockerfile  docker-compose.yml
docs/: methodology.md
specs/yara_rules/: pdf_malicious.yar  pdf_suspicious.yar
src/: __init__.py  audit_logging.py  config.py  encryption_handler.py  main.py  security.py
src/deobfuscation/: __init__.py  ast_analyzer.py  js_deobfuscator.py  stream_decoder.py  string_decoder.py
src/dynamic_analysis/: __init__.py  js_emulator.py  sandbox_monitor.py
src/ingestion/: __init__.py  file_handler.py  metadata_extractor.py
src/reporting/: __init__.py  ioc_generator.py  report_builder.py
src/reporting/templates/: report_template.html
src/scoring/: __init__.py  feature_extractor.py  heuristic_scorer.py  mitre_mapper.py  yara_engine.py
src/static_analysis/: __init__.py  incremental_update.py  object_tree.py  pdf_parser.py  tag_scanner.py
tests/: conftest.py  test_deobfuscation.py  test_ingestion.py  test_parser.py  test_scoring.py  test_tag_scanner.py
tests/fixtures/: generate_fixtures.py
vize_on_gereksinimi/: COMPREHENSIVE_EVALUATION.md  POST_DEVELOPMENT_EVALUATION.md  Uptime_Kuma_analyze.md
