[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sussy-pdf"
version = "1.0.0"
description = "Şüpheli PDF Analiz Platformu — Zararlı PDF dosyalarını tespit eden profesyonel analiz motoru"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sussy PDF Team"}
]
keywords = ["pdf", "malware", "analysis", "cybersecurity", "forensics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # PDF Analysis
    "pdfminer.six==20251230",
    "PyPDF4==3.0.1",
    
    # File Type Detection
    "python-magic-bin==0.4.14; sys_platform == 'win32'",
    "python-magic==0.4.27; sys_platform != 'win32'",
    
    # YARA Kural Motoru
    "yara-python==4.5.1",
    
    # HTTP & APIs
    "requests==2.33.0",
    
    # Configuration
    "python-dotenv==1.0.1",
    "pydantic==2.0.0",
    "pydantic-settings==2.0.0",
    
    # CLI & UI
    "rich==13.9.4",
    "click==8.1.7",
    
    # Web Framework
    "fastapi==0.135.3",
    "starlette==0.49.1",
    "uvicorn==0.34.0",
    "python-multipart==0.0.22",
    "jinja2==3.1.4",
    
    # Security & Authentication (v1.1.0+)
    "python-jose==3.3.0",
    "cryptography==43.0.0",
    "pycryptodome==3.21.0",
    
    # Rate Limiting (v1.1.0+)
    "slowapi==0.1.9",
    
    # Database & Future Support (v1.1.0+)
    "sqlalchemy==2.0.31",
    "alembic==1.15.0",
    
    # Async Improvements (v1.2.0+)
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-timeout==2.1.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "httpx==0.28.1",
    "bandit==1.8.0",
    "safety==3.2.12",
    "interrogate==1.7.0",
]

docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.46",
]

[project.scripts]
sussy-pdf = "src.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["src*"]
